# aigument

./: LICENSE  README.md  pyproject.toml
frontend/: app.py
