[project]
name = "aigument"
version = "0.1.0"
description = ""
authors = [
    {name = "oumou",email = "oumoudhmine@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "google-cloud-texttospeech (>=2.27.0,<3.0.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)",
    "openai (>=1.82.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
